[package]
name = "ursa-network"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/fleek-network/ursa"
description = "Ursa's libp2p implementation"

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
cid.workspace = true
db.workspace = true
dirs.workspace = true
fastmurmur3.workspace = true
fnv.workspace = true
futures.workspace = true
futures-util.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_car.workspace = true
jsonrpc-v2.workspace = true
libipld.workspace = true
libp2p-bitswap.workspace = true
metrics.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
surf.workspace = true
tokio.workspace = true
tracing.workspace = true
ursa-metrics = { path = "../ursa-metrics" }
ursa-store = { path = "../ursa-store" }

[dependencies.libp2p]
workspace = true
default-features = false
features = [
    "autonat",
    "dcutr",
    "dns",
    "identify",
    "kad",
    "gossipsub",
    "macros",
    "metrics",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "quic",
    "relay",
    "request-response",
    "tcp",
    "tokio",
    "yamux",
    "serde",
]

[dev-dependencies]
simple_logger.workspace = true
