[package]
name = "ursa-network"
authors = ["b0xtch <mahmoud@fleek.co>"]
description = "Ursa's libp2p implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
db.workspace = true
dirs.workspace = true
fastmurmur3.workspace = true
fnv.workspace = true
futures.workspace = true
futures-util.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_car.workspace = true
graphsync.workspace = true
ipld_traversal.workspace = true
jsonrpc-v2.workspace = true
libipld.workspace = true
libp2p-bitswap.workspace = true
metrics.workspace = true
rand.workspace = true
scalable_cuckoo_filter.workspace = true
serde.workspace = true
serde_json.workspace = true
siphasher.workspace = true
surf.workspace = true
tokio.workspace = true
tracing.workspace = true
ursa-metrics = { path = "../ursa-metrics" }
ursa-store = { path = "../ursa-store" }

[dependencies.libp2p]
workspace = true
default-features = false
features = [
    "autonat",
    "dcutr",
    "dns",
    "identify",
    "kad",
    "gossipsub",
    "macros",
    "metrics",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "quic",
    "relay",
    "request-response",
    "tcp",
    "tokio",
    "yamux",
    "serde",
]

[dev-dependencies]
simple_logger.workspace = true
