[package]
name = "ursa-pod"
version = "0.1.0"
edition = "2021"
authors = ["qti3e <i@parsa.oo>", "ossian <self@ossian.dev>"]

[dependencies]
rand.workspace = true
anyhow.workspace = true
blake3.workspace = true
thiserror.workspace = true
arrayref = "0.3"
arrayvec = "0.7"
bytes = "1.4"
elliptic-curve = { version = "0.13", default-features = false, features = ["hash2curve", "arithmetic"] }
futures = { version = "0.3", optional = true }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve", "expose-field"] }
rand_core = "0.6"
sha2 = "0.10"
hex-literal = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
secp256k1 = { version = "0.27", features = ["global-context", "rand-std"] }
blst = "0.3"
sodiumoxide = "0.2.7"

# client/server dependencies
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
benchmarks_utils = { git = "https://github.com/qti3e/benchmarks", rev = "c3c9c354dced98fdad0b08dacc8e8bd8fefcb08e", package = "benchmarks" }
criterion = { version = "0.4.0", features = ["html_reports"] }
tracing-subscriber = "0.2"

[features]
default = ["client", "server"]
client = ["tokio", "tokio-stream", "futures", "tracing"]
server = ["tokio", "tokio-stream", "futures", "tracing"]

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "tree"
harness = false

[[bench]]
name = "crypto"
harness = false

