[package]
name = "ursa-pod"
version = "0.1.0"
edition = "2021"
authors = ["qti3e <i@parsa.oo>", "ossian <self@ossian.dev>"]

[dependencies]
rand.workspace = true
anyhow.workspace = true
blake3.workspace = true
thiserror.workspace = true
arrayref = "0.3"
arrayvec = "0.7"
bytes = "1.4"
elliptic-curve = { version = "0.13", default-features = false, features = ["hash2curve", "arithmetic"] }
futures = { version = "0.3", optional = true }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve", "expose-field"] }
rand_core = "0.6"
rand_hc = "0.3"
sha2 = "0.10"

# Client and server dependencies
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }

# Criterion benchmark dependencies
hyper = { version = "1.0.0-rc.3", features = ["full"], optional = true }
http-body-util = { version = "0.1.0-rc.2", optional = true }
quinn = { version = "0.9", optional = true }
rcgen = { version = "0.10", optional = true }
rustls = { version = "0.20", default-features = false, features = ["dangerous_configuration"], optional = true }
tokio-rustls = { version = "0.23.4", optional = true }

# Binary benchmark dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rayon  = { version = "1.7", optional = true }
fnv = { version = "1.0", optional = true }
clap = { version = "4.2", features = ["derive"], optional = true }
gnuplot = { version = "0.0.37", optional = true }

[dev-dependencies]
benchmarks_utils = { git = "https://github.com/qti3e/benchmarks", rev = "c3c9c354dced98fdad0b08dacc8e8bd8fefcb08e", package = "benchmarks" }
criterion = { version = "0.4.0", features = ["html_reports", "async_tokio"] }
tracing-subscriber = "0.2"

[features]
default = ["client", "server", "tls"]
client = ["tokio", "tokio-stream", "futures", "tracing"]
server = ["tokio", "tokio-stream", "futures", "tracing"]
bench-hyper = ["tokio", "hyper", "http-body-util"]
benchmarks = ["serde", "serde_json", "rayon", "fnv", "clap", "gnuplot"]
bench-quic = ["quinn", "tls"]
tls = ["rustls", "rcgen", "tokio-rustls"]

[[bench]]
name = "encrypt"
harness = false

[[bench]]
name = "tree"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "e2e"
harness = false

[[bin]]
name = "ufdp-bench-client"
path = "benchmarks/client.rs"

[[bin]]
name = "ufdp-bench-server"
path = "benchmarks/server.rs"
required-features = ["benchmarks"]

[[bin]]
name = "ufdp-bench-parser"
path = "benchmarks/parser/main.rs"
required-features = ["benchmarks"]
