[package]
name = "ursa-proxy"
authors = ["Miguel Guarniz <miguel@fleek.xyz>"]
description = "Ursa's proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
toml.workspace = true
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tracing.workspace = true
clap.workspace = true
hyper.workspace = true
serde.workspace = true
tokio.workspace = true
