[package]
name = "ursa-proxy"
authors = ["Miguel Guarniz <miguel@fleek.xyz>", "Scott <scott@fleek.xyz>"]
description = "Ursa's proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-prometheus.workspace = true
axum-server.workspace = true
axum-tracing-opentelemetry.workspace = true
bytes.workspace = true
moka.workspace = true
toml.workspace = true
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
clap.workspace = true
hyper.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
ursa-telemetry = { path = "../ursa-telemetry" }

