[package]
name = "ursa-rpc-client"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>", "theBeardA <arslan@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's rpc client implementation"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
cid = "0.8.5"
jsonrpc-v2 = "0.11.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
simple_logger = "2.1.0"
surf = { version = "2.3", default-features = true, features = ["curl-client"] }
tiny-cid = "0.3.0"
tokio = { version = "1.19.2", features = ["rt", "net", "macros", "sync"] }
tracing = "0.1.35"
ursa-network = { path = "../ursa-network" }
ursa-rpc-server = { path = "../ursa-rpc-server" }
ursa-utils ={ path = "../ursa-utils" }

[dependencies.libipld]
version = "0.14.0"
default-features = false
