[package]
name = "ursa-rpc-client"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>", "theBeardA <arslan@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's rpc client implementation"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cid.workspace = true
jsonrpc-v2.workspace = true
libipld.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
surf.workspace = true
tokio.workspace = true
tracing.workspace = true
ursa-network = { path = "../ursa-network" }
ursa-utils ={ path = "../ursa-utils" }
