[package]
name = "ursa-rpc-server"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's multiplex server implementation"

[dependencies]
cid = "0.8.5"
fnv = "1.0.7"
tower = "0.4.13"
hyper = "0.14.20"
bytes = "1.1.0"
anyhow = "1.0.56"
futures = "0.3.21"
tracing = "0.1.33"
jsonrpc-v2 = "0.11.0"
serde_json = "1.0.81"
async-trait = "0.1.53"
fvm_ipld_car = "0.5.0"
ipld_blockstore = "0.1.1"
ursa-store = { path = "../ursa-store" }
ursa-metrics = { path = "../ursa-metrics"}
ursa-network = { path = "../ursa-network" }
serde = { version = "1.0.137", features = ["derive"] }
axum = { version = "0.5.7", features = ["multipart"] }
# tiny-cid = { version = "0.3.0", features = ["serde-codec"] }
async-std = { version = "1.11.0", features = ["attributes"] }
tokio = { version = "1.19.2", features = ["rt", "net", "macros", "sync"] }

[dependencies.libipld]
version = "0.12.0"
default-features = false

[dev-dependencies]
simple_logger = "2.1.0"
db = { package = "forest_db", version = "0.1", git = "https://github.com/theBeardA/forest-rocksdb", branch = "main", features = ["rocksdb"] }

[dependencies.libp2p]
version = "0.46.1"
default-features = false
features = [
    "identify",
]
