[package]
name = "ursa-rpc-server"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's multiplex server implementation"

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
async-trait.workspace = true
axum.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
cid.workspace = true
db.workspace = true
fnv.workspace = true
futures.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_car.workspace = true
hyper.workspace = true
jsonrpc-v2.workspace = true
libipld.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tokio-util.workspace = true
ursa-index-provider = { path = "../ursa-index-provider" }
ursa-metrics = { path = "../ursa-metrics" }
ursa-network = { path = "../ursa-network" }
ursa-store = { path = "../ursa-store" }
ursa-utils = { path = "../ursa-utils" }


[dev-dependencies]
db.workspace = true

[dependencies.libp2p]
workspace = true
default-features = false
features = [
    "identify",
]
