[package]
name = "ursa-rpc-service"
authors = ["b0xtch <mahmoud@fleek.co>"]
description = "Ursa's multiplex server implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
async-trait.workspace = true
axum.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
db.workspace = true
fnv.workspace = true
futures.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_car.workspace = true
hyper.workspace = true
jsonrpc-v2.workspace = true
libipld.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
surf.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["limit"] }
tracing.workspace = true
ursa-index-provider = { path = "../ursa-index-provider" }
ursa-metrics = { path = "../ursa-metrics" }
ursa-network = { path = "../ursa-network" }
ursa-store = { path = "../ursa-store" }

[dependencies.libp2p]
workspace = true
default-features = false
features = [
    "identify",
]
