
[package]
name = "ursa-store"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/Psychedelic/ursa"
description = "Ursa's store implementation"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cid.workspace = true
db.workspace = true
fnv.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_encoding.workspace = true
libipld.workspace = true
libp2p-bitswap.workspace = true
serde.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tracing.workspace = true
ursa-utils = { path = "../ursa-utils" }

[features]
default = ["rocksdb"]
rocksdb = ["db/rocksdb"]
