
[package]
name = "ursa-store"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]
license = "MIT"
repository = "https://github.com/fleek-network/ursa"
description = "Ursa's store implementation"

[dependencies]
anyhow.workspace = true
async-fs = "1.6.0"
async-trait.workspace = true
cid.workspace = true
db.workspace = true
fnv.workspace = true
futures.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_car.workspace = true
fvm_ipld_encoding.workspace = true
libipld.workspace = true
libp2p-bitswap.workspace = true
serde.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = ["rocksdb"]
rocksdb = ["db/rocksdb"]
