
[package]
name = "ursa-store"
authors = ["b0xtch <mahmoud@fleek.co>"]
description = "Ursa's store implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-fs = "1.6.0"
async-trait.workspace = true
db.workspace = true
fnv.workspace = true
futures.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_car.workspace = true
fvm_ipld_encoding.workspace = true
ipld_traversal.workspace = true
libipld.workspace = true
libp2p-bitswap.workspace = true
serde.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tracing.workspace = true
integer-encoding.workspace = true

[features]
default = ["rocksdb"]
rocksdb = ["db/rocksdb"]
