[package]
name = "ursa-telemetry"
authors = ["b0xtch <mahmoud@fleek.co>"]
description = "Ursa's Telemetry crate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
console-subscriber = { workspace = true, optional = true }
opentelemetry = { workspace = true, features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { workspace = true, features = ["rt-tokio"], optional = true }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-chrome = { workspace = true, optional = true }
tracing-error.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-tree = { workspace = true, optional = true }

[features]
default = ["tracing-tree", "jaeger", "chrome"]
tokio-console = ["console-subscriber"]
jaeger = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-jaeger"]
chrome = ["tracing-chrome"]
