[package]
name = "ursa-tracker"
version = "0.1.0"
edition = "2021"
authors = ["ossian <oz@fleek.co>"]
license = "MIT"
repository = "https://github.com/fleek-network/ursa"
description = "Ursa's pre-consensus node tracker"

[dependencies]
geohash = "0.12.0"
geo-types = "0.7.8"
rocksdb = "0.19.0"
axum.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

[dependencies.libp2p]
workspace = true
default-features = false
features = ["serde"]
