[package]
name = "ursa-tracker"
authors = ["ossian <oz@fleek.co>"]
description = "Ursa's pre-consensus node tracker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
geohash = "0.13.0"
geo-types = "0.7.8"
rocksdb = "0.19.0"
axum.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

[dependencies.libp2p]
workspace = true
default-features = false
features = ["serde"]
