[package]
name = "ursa-utils"
authors = ["b0xtch <mahmoud@fleek.co>", "Parsa Ghadimi <parsa@fleek.co>"]
description = "Ursa's utility function"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
