[package]
name = "ursa-utils"
authors = ["b0xtch <mahmoud@fleek.co>", "Parsa Ghadimi <parsa@fleek.co>"]
description = "Ursa's utility function"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
narwhal-config = { git = "https://github.com/MystenLabs/sui.git", rev = "3fe872b7a48995651b2a6a4167d32aeab69b7ca0", package = "narwhal-config" }
narwhal-crypto = { git = "https://github.com/MystenLabs/sui.git", rev = "3fe872b7a48995651b2a6a4167d32aeab69b7ca0", package = "narwhal-crypto" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "9a41ba511899c0d7efd9e047af2e968cdc54f77d" }
