[package]
name = "ursa-utils"
authors = ["b0xtch <mahmoud@fleek.co>", "Parsa Ghadimi <parsa@fleek.co>"]
description = "Ursa's utility function"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
ethers.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
narwhal-config = { git = "https://github.com/MystenLabs/sui.git", rev = "aa957afb31054a24d3c220266fb8c92921e9a187", package = "narwhal-config" }
narwhal-crypto = { git = "https://github.com/MystenLabs/sui.git", rev = "aa957afb31054a24d3c220266fb8c92921e9a187", package = "narwhal-crypto" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "9fbe55e9d477eac6a6d13e872e1dee19b0c83f53" }
