[package]
name = "ursa"
authors = ["theBeardA <arslan@fleek.co>"]
description = "Ursa's cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
db.workspace = true
dirs.workspace = true
dotenv.workspace = true
futures.workspace = true
libp2p = { workspace = true, default-features = false, features = ["identify", "serde"] }
pem.workspace = true
resolve-path.workspace = true
scopeguard.workspace = true
serde.workspace = true
structopt.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ursa-application =  { path = "../ursa-application" }
ursa-consensus =  { path = "../ursa-consensus" }
ursa-index-provider = { path = "../ursa-index-provider" }
ursa-metrics = { path = "../ursa-metrics" }
ursa-network = { path = "../ursa-network" }
ursa-rpc-service = { path = "../ursa-rpc-service" }
ursa-store = { path = "../ursa-store" }
ursa-telemetry = { path = "../ursa-telemetry" }
ursa-tracker = { path = "../ursa-tracker" }
ursa-utils = { path = "../ursa-utils" }
imara-diff.workspace = true

ethers.workspace = true
multiaddr = {version = "0.17.0"}
warp = "0.3.2"
workspace-hack = { git = "https://github.com/MystenLabs/sui.git", rev = "3fe872b7a48995651b2a6a4167d32aeab69b7ca0", package = "workspace-hack" }
