[package]
name = "ursa"
authors = ["theBeardA <arslan@fleek.co>"]
description = "Ursa's cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
db.workspace = true
dirs.workspace = true
dotenv.workspace = true
futures.workspace = true
libp2p = { workspace = true, default-features = false, features = ["identify", "serde"] }
pem.workspace = true
resolve-path.workspace = true
scopeguard.workspace = true
serde.workspace = true
structopt.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ursa-application =  { path = "../ursa-application" }
ursa-consensus =  { path = "../ursa-consensus" }
ursa-index-provider = { path = "../ursa-index-provider" }
ursa-metrics = { path = "../ursa-metrics" }
ursa-network = { path = "../ursa-network" }
ursa-rpc-service = { path = "../ursa-rpc-service" }
ursa-store = { path = "../ursa-store" }
ursa-telemetry = { path = "../ursa-telemetry" }
ursa-utils = { path = "../ursa-utils" }
imara-diff.workspace = true

ethers.workspace = true
multiaddr = {version = "0.17.0"}
warp = "0.3.2"
workspace-hack = { git = "https://github.com/MystenLabs/sui.git", rev = "aa957afb31054a24d3c220266fb8c92921e9a187", package = "workspace-hack" }
