[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
anyhow = "1.0.56"
env_logger = "0.9.0"
if-addrs = "0.7.0"
libp2p = { version = "0.50", features = ["websocket", "mplex", "yamux", "tcp", "async-std", "ping", "noise", "dns", "rsa", "macros"]}
log = "0.4"
rand = "0.8"
serde_json = "1"
soketto = "0.7.1"
testground = "0.4.0"
thiserror = "1"
tokio = { version = "1.23", default-features = false, features = ["sync", "rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", default-features = false, features = [] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
futures = "0.3.1"
db = { package = "forest_db", version = "0.1", git = "https://github.com/theBeardA/forest-rocksdb", branch = "main", features = ["rocksdb"] }
ursa-network = { path = "../../crates/ursa-network" }
ursa-store = { path = "../../crates/ursa-store"}
ursa-index-provider = { path = "../../crates/ursa-index-provider" }

[dependencies.libipld]
version = "0.14.0"
default-features = false

[patch.crates-io]
ipld_blockstore = { git = "https://github.com/b0xtch/blockstore" }
