[package]
edition = "2021"
name = "fetching"
version = "0.1.0"

[dependencies]
env_logger = "0.9.0"
if-addrs = "0.7.0"
ipld_traversal = { git = "https://github.com/kckeiks/rs-graphsync.git", rev = "21b3579cf19dccf428787304dd75ebcd0fb5adb7" }
fvm_ipld_blockstore = "0.1.1"
libipld = { version = "0.14.0", features = ["serde-codec"] }
futures = "0.3.1"
fvm_ipld_car = "0.6.0"
libp2p = { version = "0.50", features = ["websocket", "mplex", "yamux", "tcp", "async-std", "ping", "noise", "dns", "rsa", "macros"]}
libp2p-bitswap = "0.25.0"
serde_json = "1"
testground = "0.4"
tokio = { version = "1.23", default-features = false, features = ["sync", "rt-multi-thread", "macros", "net"] }
db = { package = "forest_db", git = "https://github.com/ChainSafe/forest", features = ["rocksdb"] }
ursa-network = { git = "https://github.com/fleek-network/ursa" }
ursa-store = { git = "https://github.com/fleek-network/ursa" }
ursa-index-provider = { git = "https://github.com/fleek-network/ursa" }
rand = "0.8.5"
