[package]
edition = "2021"
name = "testplan"
version = "0.1.0"

[dependencies]
async-trait = "0.1.58"
anyhow = "1"
env_logger = "0.9.0"
if-addrs = "0.7.0"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
soketto = "0.7.1"
testground = "0.4.0"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["sync", "rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", default-features = false, features = [] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
db = { package = "forest_db", version = "0.2.0", git = "https://github.com/theBeardA/forest-rocksdb", branch = "chore/upgrade-db", features = ["rocksdb"] }
futures = "0.3.21"
ursa-index-provider = { path = "../../crates/ursa-index-provider" }
ursa-metrics = { path = "../../crates/ursa-metrics" }
ursa-network = { path = "../../crates/ursa-network" }
ursa-store = { path = "../../crates/ursa-store" }
libp2p-bitswap = "0.25.0"

[dependencies.libp2p]
version = "0.50.0"
default-features = false
features = [
    "websocket",
    "autonat",
    "dcutr",
    "dns",
    "identify",
    "kad",
    "gossipsub",
    "macros",
    "metrics",
    "mdns",
    "mplex",
    "yamux",
    "noise",
    "ping",
    "quic",
    "relay",
    "request-response",
    "tcp",
    "tokio",
    "serde",
]

[dependencies.libipld]
version = "0.14.0"
default-features = false
